--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.11.1
 certifi==2026.1.4
 charset-normalizer==3.4.4
+dj-database-url==3.1.2
 Django==6.0.2
 django-cors-headers==4.9.0
 django-environ==0.13.0
